--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,17 @@ body {
   letter-spacing: 0.2em;
   border: 0;
   background-color: transparent;
+  position: relative;
+  z-index: 1;
+}
+.button-detail::before{
+position: absolute;
+  background: #FFE17F;
+  content: "";
+  width: 100%;
+  height: 100%;
+z-index: -1;
+transform: scale(1, 0.3);
 }
 .tab-title {
   font-family: Raleway, sans-serif;
@@ -91,7 +102,7 @@ body {
   justify-content: space-between;
   margin-left: 60px;
 }
-.navigation-header button{ 
+.navigation-header button{
   background-color: transparent;
   border: 0;
   margin: 0;
@@ -164,9 +175,23 @@ margin-right: 10px;
 }
 .navigation-item-element:nth-child(1) {
   margin-right: 304px;
+  position: relative;
+}
+.navigation-item-element:nth-child(1)::before{
+position: absolute;
+width: 50px;
+height: 50px;
+content: "";
+border: 2px solid #000000;
+border-radius: 50%;
+left: 240px;
+top: -15px;
+background-image: url("../img/plus.svg") ;
+background-repeat: no-repeat;
+background-position: center;
+opacity: 0.2;
 }
 .navigation-item-element:nth-child(2) {
-  
   margin-right: 19px;
 }
 .navigation-item-element:nth-child(3) {
@@ -299,6 +324,15 @@ margin-right: 10px;
   position: relative;
   top: -15px;
 }
+.services-list::before{
+  position: absolute;
+  width: 7px;
+height: 319px;
+background: #000000;
+content: "";
+left: 257px;
+bottom: 69px;
+}
 .services-item{
   margin-bottom: 44px;
 }
@@ -324,7 +358,7 @@ top:-75px;}
 .garanty{
   display: none;
 }
-.garanty::before { 
+.garanty::before {
   position: absolute;
   top:-35px;
   left: 120%;
@@ -334,7 +368,7 @@ top:-75px;}
 .credit{
   display: none;
 }
-.credit::before { 
+.credit::before {
   position: absolute;
   top:-35px;
   left: 120%;
@@ -373,11 +407,20 @@ top:-75px;}
 .contacts {
   width: 560px;
 }
+.title-company::before{
+position: absolute;
+background: #000000;
+width: 80px;
+height: 7px;
+content: "";
+top:-42px;
+}
 .title-company {
   padding: 0;
   margin: 0;
   margin-top: 49px;
   margin-bottom: 26px;
+  position: relative;
 }
 .advantage-range {
   width: 497px;
@@ -388,7 +431,7 @@ top:-75px;}
   width: 497px;
   height: 120px;
   margin-bottom: 52px;
-  padding-left: 35px;
+  padding-left: 26px;
 }
 .pickup {
   margin-bottom: 30px;
@@ -416,6 +459,7 @@ top:-75px;}
   column-gap: 40px;
   row-gap: 50px;
   padding-top: 75px;
+  padding-bottom: 131px;
 }
 
 .e-mail-advantage {
@@ -477,11 +521,23 @@ top:-75px;}
 .delivery-company-item {
   font-weight: 700;
   font-size: 18px;
+  position: relative;
+}
+.delivery-company-item::before{
+  position: absolute;
+  width: 8px;
+height: 8px;
+background: #FFC700;
+content: "";
+top:35%;
+border-radius: 50%;
+left:-26px;
 }
 .services,
 .advantage,
 .newsletter {
   background-color: #f0f0f0;
+  height: auto;
 }
 
 .main-inner {
@@ -491,6 +547,10 @@ top:-75px;}
 .monopod {
   margin-left: 60px;
   margin-bottom: 14px;
+}
+.newsletter-button{
+  border:3px solid #000000;
+  opacity: 0.1;
 }
 .breadcrumbs-link {
   font-size: 16px;
@@ -625,8 +685,9 @@ top:-75px;}
 .catalog-filter-group,
 .contacts-schedule,
 .delivery-company,
-.footer-navigation-item,
-.services-item {
+.footer-navigation-link,
+.services-item
+{
   list-style-type: none;
 }
 .pagination-item:nth-child(1) {
@@ -666,6 +727,7 @@ top:-75px;}
   color: #ffffff;
 }
 .footer-contacts-phone {
+  margin-left: auto;
   text-decoration: none;
 }
 .footer-contacts-logo {
@@ -700,19 +762,48 @@ top:-75px;}
   flex-wrap: wrap;
   margin-left: 506px;
   margin-top: 53px;
-  width: 150px;
+  padding: 0;
+  list-style-type: none;
+  margin-right: auto;
+  position: relative;
 }
-.footer-social-item {
+.footer-social-list::before{
+position: absolute;
+background: #FFC700;
+content: "";
+height: 7px;
+width: 80px;
+top:25%;
+left:-510px;
+}
+.footer-social-item{
   margin-right: 15px;
   margin-bottom: 15px;
   width: 40px;
   height: 40px;
-  outline: 1px solid #ffffff;
+}
+.footer-social-link {
+  display: block;
+  height: 100%;
+  background-color:rgba(255, 255, 255, 0.3);
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius:50% ;
+}
+.facebook{
+  background-image: url("../img/facebook.svg");
+}
+.instagram{
+  background-image: url("../img/instagram.svg");
+}
+.twitter{
+  background-image: url("../img/twitter.svg");
 }
 .footer-social-item:nth-child(3n) {
   margin-right: 0;
 }
 .htmlacademy-link {
   margin-top: 53px;
+  margin-left: auto;
 }
 
