--- a/css/styles.css
+++ b/css/styles.css
@@ -64,15 +64,7 @@ body {
   position: relative;
   z-index: 1;
 }
-.button-detail::before{
-position: absolute;
-  background: #FFE17F;
-  content: "";
-  width: 100%;
-  height: 100%;
-z-index: -1;
-transform: scale(1, 0.3);
-}
+
 .tab-title {
   font-family: Raleway, sans-serif;
   font-weight: 800;
@@ -80,6 +72,7 @@ transform: scale(1, 0.3);
   line-height: 50px;
   color: #000000;
 }
+/* Хедер */
 .main-header {
   background: #ffe17f;
   color: #000000;
@@ -101,6 +94,7 @@ transform: scale(1, 0.3);
   align-items: center;
   justify-content: space-between;
   margin-left: 60px;
+  height: auto;
 }
 .navigation-header button{
   background-color: transparent;
@@ -113,17 +107,18 @@ transform: scale(1, 0.3);
 input {
   border: none;
   background-color: transparent;
-  margin-left: 20px;
   margin-top: auto;
   margin-bottom: auto;
+  width: 480px;
+  margin-right: 24px;
 }
 .navigation-link {
   display: block;
   color: #000000;
   font-size: 16px;
-  line-height: 19px;
   text-decoration: none;
   margin-left: 0;
+  height: 100%;
 }
 .navigation-icon{
 margin-right: 10px;
@@ -147,24 +142,41 @@ margin-right: 10px;
 
 .navigation-user {
   display: flex;
-  width: 538px;
-  justify-content: space-between;
   list-style-type: none;
+  align-items: center;
+  width: 537px;
+  margin:0;
+  padding: 0;
+
 }
 .navigation-item:nth-child(1) {
-  flex-grow: 2;
+  width: 245px;
+  margin-right: 15px;
 }
 .navigation-item:nth-child(2) {
-  flex-grow: 1;
+  width: 120px;
+  margin-right: 14px;
+}
+.quantity{
+  background-color: white;
+width: 21px;
+height: 21px;
+border-radius: 50%;
+text-align: center;
+font-size: 14px;
+line-height: 1.6em;
+position: relative;
+right: -7px;
 }
 .navigation-item:nth-child(3) {
-  flex-grow: 1;
+  margin: 0;
+  width: 126px;
+  position: relative;
 }
-
+ 
 .navigation-services {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   width: 1041px;
   align-items: center;
   list-style-type: none;
@@ -174,6 +186,7 @@ margin-right: 10px;
   margin-bottom: 0;
 }
 .navigation-item-element:nth-child(1) {
+  width:236px;
   margin-right: 304px;
   position: relative;
 }
@@ -192,11 +205,18 @@ background-position: center;
 opacity: 0.2;
 }
 .navigation-item-element:nth-child(2) {
+  width: 140px;
   margin-right: 19px;
 }
 .navigation-item-element:nth-child(3) {
+  width:140px;
   margin-right: 62px;
 }
+.navigation-item-element:nth-child(4) {
+  width:140px;
+  text-align: right;
+}
+
 .link-list {
   display: grid;
   grid-template-columns: 210px 200px 200px;
@@ -224,7 +244,7 @@ opacity: 0.2;
   list-style-type: none;
   margin-bottom: 18px;
 }
-
+/* слайдер */
 .bestsellers {
   margin: 0 auto;
   width: 1161px;
@@ -235,6 +255,46 @@ opacity: 0.2;
   display: flex;
   width: 1161px;
   margin: 0 auto;
+  position: relative;
+}
+.first-slider::before{
+  position: absolute;
+  content: "01";
+  background: transparent;
+  width: 250px;
+height: 135px;
+color: white;
+font-weight: 800;
+font-size: 180px;
+line-height: 30px;
+top:-70px;
+left:861px;
+}
+.second-slider::before{
+  position: absolute;
+  content: "02";
+  background: transparent;
+  width: 250px;
+height: 135px;
+color: white;
+font-weight: 800;
+font-size: 180px;
+line-height: 30px;
+top:-70px;
+left:861px;
+}
+.third-slider::before{
+  position: absolute;
+  content: "03";
+  background: transparent;
+  width: 250px;
+height: 135px;
+color: white;
+font-weight: 800;
+font-size: 180px;
+line-height: 30px;
+top:-70px;
+left:861px;
 }
 .second-slider,
 .third-slider{
@@ -249,6 +309,21 @@ opacity: 0.2;
   margin-top: 121px;
   margin-bottom: 19px;
 }
+.slider-button{
+  position: relative;
+  width: 220px;
+}
+.slider-button::after{
+  position: absolute;
+    background: #FFE17F;
+    content: "";
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+  z-index: -1;
+  transform: scale(1, 0.3);
+  }
 .description {
   margin-left: 40px;
   margin-bottom: 120px;
@@ -263,6 +338,7 @@ opacity: 0.2;
 .option-value {
   grid-row: 1/2;
 }
+/* каталог в картинках */
 .catalog-list {
   margin: 0 auto;
   display: flex;
@@ -317,6 +393,7 @@ opacity: 0.2;
   display: flex;
   flex-wrap: wrap;
 }
+/* Услуги */
 .services-list{
   margin-right: 240px;
   padding: 0;
@@ -331,14 +408,39 @@ height: 319px;
 background: #000000;
 content: "";
 left: 257px;
+top: -100px;
 bottom: 69px;
 }
 .services-item{
   margin-bottom: 44px;
 }
+.services-item:nth-child(3){
+  margin-bottom: 0;
+}
 .services-user{
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 150px;
+  padding: 0;
+}
+.button-detail{
+  position: relative;
+  width: 160px;
+}
+.button-detail::after{
+  position: absolute;
+  background: #FFE17F;
+  content: "";
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+z-index: -1;
+transform: scale(1, 0.3);
 }
 .services-title{
 margin:0 ;
@@ -375,7 +477,7 @@ top:-75px;}
   margin-left: -9px;
   content: url("../img/illustration-credit.svg");
 }
-
+/* ИНФОРМАЦИЯ */
 .advantage {
   display: flex;
   justify-content: space-between;
@@ -392,6 +494,33 @@ top:-75px;}
   width: 125px;
   height: 100px;
   background-color: #ffe17f;
+}
+/* О нас  */
+.button-about{
+  position: relative;
+  width: 260px;
+}
+.button-about::after{
+  position: absolute;
+    background: #FFE17F;
+    content: "";
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+  z-index: -1;
+  transform: scale(1, 0.3);
+}
+.info{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: rgba(220, 220, 220, 0.5);
+  background-image: url("../img/info.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  border-color: transparent;
+  margin-right: 33px; 
 }
 .index-columns {
   display: flex;
@@ -421,6 +550,9 @@ top:-42px;
   margin-top: 49px;
   margin-bottom: 26px;
   position: relative;
+}
+.button-about{
+  width: 260px;
 }
 .advantage-range {
   width: 497px;
@@ -467,11 +599,34 @@ top:-42px;
   grid-row: 1/2;
 }
 .field {
+  margin: 0;
   grid-column: 1/2;
   grid-row: 2/3;
 }
+.newsletter-email{padding: 0;
+  position: relative;
+}
+.newsletter-email::before{
+  position: absolute;
+  width: 601px;
+  border-bottom: 3px solid #000000;
+  content: "";
+  opacity: 0.1;
+  top: 45px;
+  left: -1px;
+}
 .e-mail-free {
   padding-left: 131px;
+  position: relative;
+}
+.e-mail-free::before{
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  background-image: url("../img/mark.svg");
+  content: "";
+  left:100px;
+  top:25%;
 }
 .title-mailing {
   margin: 0;
@@ -552,6 +707,7 @@ left:-26px;
   border:3px solid #000000;
   opacity: 0.1;
 }
+/* каталог */
 .breadcrumbs-link {
   font-size: 16px;
   line-height: 19px;
@@ -718,6 +874,7 @@ left:-26px;
   display: grid;
   place-items: center;
 }
+/* футер */
 .page-footer {
   background-color: #444444;
 }
@@ -729,6 +886,7 @@ left:-26px;
 .footer-contacts-phone {
   margin-left: auto;
   text-decoration: none;
+  margin-right: 0;
 }
 .footer-contacts-logo {
   margin-top: 62px;
@@ -744,7 +902,7 @@ left:-26px;
   display: flex;
   width: 465px;
   justify-content: flex-start;
-  margin-right: 58px;
+  margin-right: 121px;
   flex-wrap: wrap;
 }
 .footer-navigation-item {
@@ -760,7 +918,7 @@ left:-26px;
 .footer-social-list {
   display: flex;
   flex-wrap: wrap;
-  margin-left: 506px;
+  margin-left: 536px;
   margin-top: 53px;
   padding: 0;
   list-style-type: none;
