--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,81 @@ body {
   color: #000000;
 }
 /* Хедер */
+.search-line{
+  position: relative;
+  display: flex;
+}
+.search-line:before{
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  content: url("../img/search.svg");
+  background-color: transparent;
+  top:7px;
+  cursor: pointer;
+  left:0;
+}
+input {
+  margin: 0;
+height: 40px;
+  border: none;
+  background-color: transparent;
+  margin-top: auto;
+  margin-bottom: auto;
+  outline: none;
+  padding-left:36px ;
+  margin-right: 0;
+}
+.button-search{
+  width: 160px;
+height: 40px;
+margin-left: 0;
+display: none;
+}
+input:not(:placeholder-shown)+.button-search{
+  display: block;
+  border-top-right-radius:20px;
+  border-bottom-right-radius:20px;
+  border-top-left-radius:0 ;
+  border-bottom-left-radius: 0;
+  border: 2px solid #000000;
+  border-left: 0;
+}
+input:not(:placeholder-shown)+.button-search:hover{
+  color: white;
+  background: #000000;
+}
+input:not(:placeholder-shown)+.button-search:focus{
+  border: 2px solid #AF4FFF;
+}
+input:not(:placeholder-shown)+.button-search:active{
+  background: #000000;
+  color: rgba(220, 220, 220, 0.3)
+}
+input:focus{
+  border: 2px solid #AF4FFF;
+  border-radius: 20px;
+  width: 516px;
+height: 40px;
+margin-right: 0;
+}
+input:not(:placeholder-shown){
+  width: 356px;
+  border-top-right-radius:0;
+  border-bottom-right-radius:0;
+  border-top-left-radius:20px ;
+  border-bottom-left-radius: 20px;
+  border: 2px solid #000000;
+}
+input::-webkit-input-placeholder {
+  color: #000000;
+  opacity: 0.3; }
+input:hover::-webkit-input-placeholder{ color:#000000;
+    opacity: 0.6; }
+input:active::-webkit-input-placeholder{ color:#000000;}
+
+
+
 .main-header {
   background: #ffe17f;
   color: #000000;
@@ -104,14 +179,7 @@ body {
   margin-top: auto;
   margin-bottom: auto;
 }
-input {
-  border: none;
-  background-color: transparent;
-  margin-top: auto;
-  margin-bottom: auto;
-  width: 480px;
-  margin-right: 24px;
-}
+
 .navigation-link {
   display: block;
   color: #000000;
@@ -1083,8 +1151,12 @@ opacity: 0.3;
   margin-right: 0;
 }
 .footer-social-icon{
-  margin-top: 12px;
-  margin-left: 13px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
 }
 .footer-social-list {
   display: flex;
@@ -1112,6 +1184,7 @@ left:-510px;
   height: 40px;
 }
 .footer-social-link {
+  position: relative;
   display: block;
   height: 100%;
   background-color:rgba(255, 255, 255, 0.3);
