--- a/css/styles.css
+++ b/css/styles.css
@@ -191,7 +191,7 @@ margin-right: 0;
 .navigation-link:hover{
   opacity: 0.6;
 }
-.navigation-link:focus{
+.navigation-item .navigation-link:focus{
   border: 2px solid #AF4FFF;
   border-radius: 20px;
 }
@@ -230,11 +230,13 @@ margin-right: 10px;
 
 }
 .navigation-item:nth-child(1) {
-  width: 245px;
+  text-align: center;
+  width: 117px;
   margin-right: 15px;
 }
 .navigation-item:nth-child(2) {
-  width: 120px;
+  text-align: center;
+  width: 136px;
   margin-right: 14px;
 }
 .quantity{
@@ -248,10 +250,12 @@ line-height: 1.6em;
 position: relative;
 right: -7px;
 }
-.navigation-item:nth-child(3) {
+.navigation-item:nth-child(4) {
   margin: 0;
-  width: 126px;
+
   position: relative;
+  text-align: center;
+  width:131px;
 }
 
 .navigation-services {
@@ -265,9 +269,13 @@ right: -7px;
   margin-left: 60px;
   margin-bottom: 0;
 }
+.navigation-element{
+  border: 2px solid #AF4FFF;
+  border-radius: 25px;
+  padding: 14px 20px 15px;
+}
 .navigation-item-element:nth-child(1) {
-  width:236px;
-  margin-right: 304px;
+  margin-right: 254px;
   position: relative;
 }
 .navigation-item-element:nth-child(1)::before{
@@ -297,8 +305,10 @@ opacity: 1;
   }
   .navigation-element:focus{
     border: 2px solid #AF4FFF;
-    border-radius: 20px;
+    border-radius: 25px;
+    padding: 14px 20px 15px;
   }
+
   .navigation-element:active{
     opacity: 0.3;
     border-bottom: 2px solid #000000;
@@ -345,6 +355,12 @@ opacity: 1;
 .link-list-item {
   list-style-type: none;
   margin-bottom: 18px;
+}
+.link-list .navigation-link:focus{
+  text-align: center;
+  border: 2px solid #AF4FFF;
+  border-radius: 20px;
+  text-align: center;
 }
 /* слайдер */
 .bestsellers {
@@ -676,7 +692,7 @@ top:-75px;}
 }
 .advantage:hover .auto-delivery{
   background-color: #FFC700;
-} 
+}
 .advantage:hover{
   background: #EBEBEB;
 }
@@ -1247,6 +1263,11 @@ left:-540px;
   background-repeat: no-repeat;
   background-position: center;
   border-radius:50% ;
+}
+.facebook{
+border: 5px solid #AF4FFF;
+  width:40px;
+  height: 40px;
 }
 .footer-social-link:hover{
   background: #FFC700;
