--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@
   src: url("../fonts/rubik/rubik-800.woff2") format("woff2");
   font-display: swap;
 }
+
 html {
   height: 100%;
 }
@@ -63,6 +64,7 @@ body {
   background-color: transparent;
   position: relative;
   z-index: 1;
+  cursor: pointer;
 }
 
 .tab-title {
@@ -77,13 +79,14 @@ body {
   display: flex;
   width: 1075px;
   align-items: center;
-  justify-content: space-between;
+  justify-content: start;
   margin-left: 44px;
   height: auto;
 }
 .search-line {
   position: relative;
   display: flex;
+  margin-right:15px ;
 }
 .search-line:before {
   position: absolute;
@@ -107,11 +110,18 @@ body {
   width: 516px;
   height: 40px;
 }
+.header-search::placeholder{
+  font-size: 16px;
+  font-family: Rubik;
+font-style: normal;
+font-weight: normal;
+}
 .button-search {
   width: 160px;
   height: 40px;
   margin-left: 0;
   display: none;
+  cursor: pointer;
 }
 .header-search:not(:placeholder-shown) + .button-search {
   display: block;
@@ -170,12 +180,13 @@ body {
   flex-direction: column;
   margin-top: 40px;
 }
-.logo {
-  position: relative;
-  top: -23px;
-  left: 61px;
+.device-logo{
+  margin-left: 60px;
+  margin-top: -23px;
+  padding: 0;
+  height:max-content;
+  margin-bottom: 26px;
 }
-
 .navigation-header button {
   background-color: transparent;
   border: 0;
@@ -237,12 +248,11 @@ body {
 .navigation-item:nth-child(1) {
   text-align: center;
   width: 117px;
-  margin-right: 100px;
+  margin-right: 153px;
 }
 .navigation-item:nth-child(2) {
   text-align: center;
   width: 136px;
-  margin-right: 20px;
 }
 .quantity {
   background-color: white;
@@ -265,13 +275,13 @@ body {
 .navigation-services {
   display: flex;
   flex-wrap: wrap;
-  width: 1041px;
   align-items: center;
   list-style-type: none;
   padding-left: 0;
   padding-right: 0;
   margin-bottom: 0;
   margin-left: 40px;
+  margin-right: 0;
 }
 .navigation-element {
   border: 2px solid #af4fff;
@@ -280,7 +290,7 @@ body {
   border: none;
 }
 .navigation-item-element:nth-child(1) {
-  margin-right: 270px;
+  margin-right: 265px;
   position: relative;
 }
 .navigation-item-element:nth-child(1)::before {
@@ -290,7 +300,7 @@ body {
   content: "";
   border: 2px solid #000000;
   border-radius: 50%;
-  left: 270px;
+  left: 265px;
   top: -12px;
   background-image: url("../img/plus.svg");
   background-repeat: no-repeat;
@@ -324,11 +334,11 @@ body {
 }
 .navigation-item-element:nth-child(2) {
   width: 140px;
-  margin-right: 29px;
+  margin-right: 20px;
 }
 .navigation-item-element:nth-child(3) {
   width: 140px;
-  margin-right: 51px;
+  margin-right: 78px;
 }
 .navigation-item-element:nth-child(4) {
   width: 140px;
@@ -337,7 +347,7 @@ body {
 
 .link-list {
   display: grid;
-  grid-template-columns: 250px 200px 200px;
+  grid-template-columns: 220px 150px 200px;
   grid-template-rows: 18px 18px 18px;
   padding: 0;
   margin-left: 42px;
@@ -345,6 +355,7 @@ body {
   margin-top: 35px;
   row-gap: 25px;
   column-gap: 29px;
+  width: 1160px;
 }
 .link-list-item:nth-child(2) {
   grid-column: 1/2;
@@ -405,7 +416,7 @@ body {
   font-size: 180px;
   line-height: 30px;
   top: -70px;
-  left: 881px;
+  left: 887px;
 }
 .second-slider::before {
   position: absolute;
@@ -418,7 +429,7 @@ body {
   font-size: 180px;
   line-height: 30px;
   top: -70px;
-  left: 861px;
+  left: 887px;
 }
 .third-slider::before {
   position: absolute;
@@ -431,7 +442,7 @@ body {
   font-size: 180px;
   line-height: 30px;
   top: -70px;
-  left: 861px;
+  left: 887px;
 }
 .second-slider,
 .third-slider {
@@ -445,7 +456,7 @@ body {
   padding: 0;
   margin-left: 40px;
   margin-top: 121px;
-  margin-bottom: 19px;
+  margin-bottom: 25px;
   width: 560px;
 }
 .slider-button {
@@ -477,8 +488,8 @@ body {
 .specifications {
   margin-left: 40px;
   display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: auto;
+  grid-template-columns:max-content;
+  grid-template-rows: max-content;
   gap: 20px;
 }
 .option-value {
@@ -502,6 +513,7 @@ body {
   width: 160px;
   margin-right: 40px;
   top: 193px;
+  letter-spacing: -0.02em;
 }
 .virtual::after {
   position: absolute;
@@ -541,6 +553,7 @@ body {
   top: -193px;
   background-color: #ffe17f;
   left: 0;
+ 
 }
 .watch::after {
   position: absolute;
@@ -599,8 +612,8 @@ body {
   background: #000000;
   content: "";
   left: 277px;
-  top: -100px;
-  bottom: 69px;
+  top: -80px;
+
 }
 .services-item {
   margin-bottom: 44px;
@@ -615,12 +628,17 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 150px;
   padding: 0;
+  margin-bottom: 120px;
+}
+.tab-title{
+  margin-top:48px;
+  margin-bottom: 40px;
 }
 .button-detail {
   position: relative;
   width: 160px;
+  cursor: pointer;
 }
 .button-detail::after {
   position: absolute;
@@ -675,14 +693,14 @@ body {
 .delivery::before {
   position: absolute;
   top: -35px;
-  left: 120%;
+  left: 102%;
   margin-left: -9px;
   content: url("../img/illustration-delivery.png");
 }
-.garanty {
+.guarantee {
   display: none;
 }
-.garanty::before {
+.guarantee::before {
   position: absolute;
   top: -35px;
   left: 120%;
@@ -699,6 +717,7 @@ body {
   margin-left: -9px;
   content: url("../img/illustration-credit.svg");
 }
+
 /* ИНФОРМАЦИЯ */
 .advantage {
   display: flex;
@@ -719,18 +738,14 @@ body {
 .advantage:active {
   opacity: 0.3;
 }
-.advantage::before {
+.advantage:focus:before {
   background: transparent;
   width: 1150px;
   height: 100px;
   position: absolute;
   content: "";
   border: 5px solid #af4fff;
-  display: none;
-}
-.advantage:focus::before {
-  display: block;
-}
+ }
 .info:hover {
   background: #dcdcdc;
   background-image: url("../img/info-3.svg");
@@ -755,6 +770,7 @@ body {
   background-position: center;
   border-color: transparent;
   margin-right: 33px;
+  cursor: pointer;
 }
 .order {
   font-family: Raleway, sans-serif;
@@ -773,6 +789,7 @@ body {
 .button-about {
   position: relative;
   width: 260px;
+  cursor: pointer;
 }
 .button-about::after {
   position: absolute;
@@ -848,6 +865,7 @@ body {
 }
 .pickup {
   margin-bottom: 30px;
+  width: 510px;
 }
 .contacts-subtitle {
   margin-bottom: 15px;
@@ -882,6 +900,14 @@ body {
 }
 .newsletter-email {
   padding: 0;
+}
+.field::placeholder{
+  font-family: Rubik;
+font-style: normal;
+font-weight: normal;
+font-size: 18px;
+line-height: 30px;
+opacity: 0.5;
 }
 .field {
   background-color: transparent;
@@ -928,6 +954,7 @@ body {
 .title-mailing {
   margin: 0;
   padding: 0;
+  width: 400px;
 }
 .newsletter-button {
   border: 3px solid rgba(220, 220, 220, 0.7);
@@ -947,7 +974,9 @@ body {
   background: #000000;
   color: rgba(220, 220, 220, 0.3);
 }
-
+.e-mail-advantage{
+  width: 530px;
+}
 .option {
   font-size: 16px;
 }
@@ -1088,6 +1117,7 @@ body {
 }
 .button-sorting{
   margin-right: 300px;
+  cursor: pointer;
 }
 .button-up{
   background-color:transparent;
@@ -1095,12 +1125,14 @@ body {
   align-items: center;
   justify-content: center;
   margin-right: 19px;
+  cursor: pointer;
 }
 .button-down{
   background-color: transparent;
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
 .products-filter {
   margin: 0;
@@ -1293,11 +1325,14 @@ z-index: -1;
 .page-footer {
   background-color: #444444;
 }
-.contacts-address-text {
+.footer-contacts-address-text {
   width: 248px;
   font-size: 16px;
   line-height: 19px;
   font-weight: normal;
+  font-style: normal;
+  padding: 0;
+  margin: 0;
 }
 .footer-navigation-link,
 .footer-contacts-address,
@@ -1350,8 +1385,8 @@ z-index: -1;
   opacity: 0.3;
 }
 .footer-contacts-logo {
-  margin-top: 62px;
-  margin-right: 1015px;
+  margin-top: 72px;
+  margin-right: 1515px;
   margin-bottom: 35px;
 }
 .footer-contacts {
@@ -1363,7 +1398,7 @@ z-index: -1;
   display: flex;
   width: 520px;
   justify-content: flex-start;
-  margin-right: 100%;
+  margin-right: auto;
   flex-wrap: wrap;
 }
 .footer-navigation-item {
